# StructDiffusion

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
configs/: base.yaml  collision_detector.yaml  conditional_pose_diffusion.yaml  diffuser_v1.yaml  diffuser_v1_shapes.yaml  diffuser_v1_shapes_random_order.yaml  diffuser_v1_tower.yaml  diffuser_v2_shapes.yaml  diffuser_v3_lang.yaml  diffuser_v4_lang_template_language.yaml  diffuser_v5_compositional_two_perturbation.yaml  diffuser_v6_compositional_three_perturbation.yaml  encoderdecoder.yaml  noised_collision_discriminator.yaml  pairwise_collision.yaml  sturcture_predictor_3d_planar_small_shapes_PCT_random_sampling_more_pts_lan_local_shape_param.yaml  testing_data.yaml
configs/physics_eval/dataset_housekeep_custom/: base.yaml
rail_manipulation_msgs/: .travis.yml  AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
rail_manipulation_msgs/action/: Arm.action  Gripper.action  Lift.action  MoveToJointPose.action  MoveToPose.action  Pickup.action  Primitive.action  RecognizeObject.action  Store.action  VerifyGrasp.action
rail_manipulation_msgs/msg/: BoundingVolume.msg  Grasp.msg  GraspFeedback.msg  GraspingState.msg  SegmentedObject.msg  SegmentedObjectList.msg
rail_manipulation_msgs/srv/: CallIK.srv  CartesianPath.srv  PairwiseRank.srv  PrepareGrasp.srv  ProcessSegmentedObjects.srv  RearrangeObjects.srv  SegmentObjects.srv  SegmentObjectsFromPointCloud.srv  SuggestGrasps.srv
scripts/: infer.py  infer_with_discriminator.py  train_diffuser_v3_lang.py  train_discriminator.py  train_generator.py
src/StructDiffusion/data/: MeshSceneViewer.py  dataset_pairwise_collision.py  dataset_v1_diffuser.py  dataset_v23_continuous_out_ar_6d_all_objects_all_shapes.py  dataset_v2_diffuser_template_language.py  dataset_v41_discriminator_env_lan_local_shape_param_return_pose.py  dataset_v42_collision_discriminator.py  dataset_v4_diffuser_compositional_three_perturbation.py  dataset_v5_collision_discriminator.py  pairwise_collision.py  semantic_arrangement.py
src/StructDiffusion/diffusion/: noise_schedule.py  pose_conversion.py  sampler.py
src/StructDiffusion/evaluation/: eval_transformer_all_shapes.py  infer_collision.py  infer_diffuser_v2_variable_num_objs_test_objects.py  infer_diffuser_v3_lang.py  infer_diffuser_v4_template_language.py  infer_diffuser_v5_compositional_two_perturbation.py  infer_diffuser_v6_compositional_three_perturbation.py  infer_discriminator.py  infer_vae.py
src/StructDiffusion/language/: convert_to_natural_language.ipynb  dataset.py  test_parrot_paraphrase.py  tokenizer.py
src/StructDiffusion/models/: baselines.py  encoders.py  models.py  pl_models.py  semantic_rearrangement_discriminators.py
src/StructDiffusion/physics_eval/: eval_diffusion_v3_lang.py  eval_diffusion_v3_lang_lan_local_shape_param_discriminator_collision_detector.py  eval_diffusion_v3_lang_lan_local_shape_param_discriminator_collision_detector_online.py  eval_diffusion_v4_lang_template_sentence_lan_local_shape_param_discriminator_collision_detector.py  eval_diffusion_v5_compositional_two_perturbation.py  eval_diffusion_v6_compositional_three_perturbation.py  eval_transformer_all_shapes.py  eval_transformer_all_shapes_cem_lan_local_shape_param_discriminator_collision_detector.py  eval_transformer_all_shapes_lan_local_shape_param_discriminator_collision_detector.py  eval_vae.py  eval_vae_cem_lan_local_shape_param_discriminator_collision_detector.py  eval_vae_lan_local_shape_param_discriminator_collision_detector.py  run_tests.sh  visualize_results.py
src/StructDiffusion/robot/: README.md  rearrange_collision_server.py  rearrange_server.py
src/StructDiffusion/training/: train_actor_vae_3networks_all_shapes.py  train_diffuser_v1.py  (+7 more)
(+153 files in other folders)
