[metadata]
name = StructDiffusion-wliu88
version = 0.0.1
author = Weiyu Liu
author_email = weiyul@stanford.edu
description = Source code for StructDiffusion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wliu88/StructDiffusion
project_urls =
    Bug Tracker = https://github.com/wliu88/StructDiffusion/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
